--- a/hugo.toml
+++ b/hugo.toml
@@ -20,3 +20,22 @@ weight = 3
 
 [params]
 description = "Deep dives into marketing analytics, experimentation, and measurement."
+
+[taxonomies]
+tag = "tags"
+category = "categories"
+
+[[menu.main]]
+name = "Home"
+url = "/"
+weight = 1
+
+[[menu.main]]
+name = "Posts"
+url = "/posts/"
+weight = 2
+
+[[menu.main]]
+name = "About"
+url = "/about/"
+weight = 3
