--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/monochrome"]
 	path = themes/monochrome
 	url = https://github.com/kaiiiz/hugo-theme-monochrome.git
+[submodule "themes/rusty-typewriter"]
+	path = themes/rusty-typewriter
+	url = https://github.com/math-queiroz/rusty-typewriter.git
