Add official Hugo Vercel deployment configuration
- Add vercel.json with proper buildCommand and outputDirectory
- Add build.sh script following Hugo official documentation
- Remove conflicting theme hugo.toml
- Update baseURL for Vercel deployment
- This should fix all layout and deployment issues

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://eeshansrivastava89.github.io/soma-blog-hugo/"
+baseURL = "https://soma-blog-hugo.vercel.app/"
 languageCode = "en-us"
 title = "Eeshan S."
 theme = "rusty-typewriter"
