--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.104.1
-supabase==2.3.5
-pandas==2.1.3
-scipy==1.11.4
-numpy==1.26.2
-python-dotenv==1.0.0
+fastapi==0.115.0
+supabase==2.5.0
+pandas==2.2.0
+scipy==1.14.0
+numpy==1.26.4
+python-dotenv==1.0.1
+uvicorn==0.30.0
