--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "chmod a+x build.sh && ./build.sh",
-  "outputDirectory": "public",
-  "functions": {
-    "api/**/*.py": {
-      "runtime": "python@3.12"
-    }
-  }
+  "outputDirectory": "public"
 }
