--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,7 @@
 fastapi==0.115.0
 supabase==2.5.0
+pandas==2.2.0
+scipy==1.14.0
+numpy==1.26.4
 python-dotenv==1.0.1
 uvicorn==0.30.0
-pandas
-scipy
-numpy
-plotly
