--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,11 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "chmod a+x build.sh && ./build.sh",
   "outputDirectory": "public",
+  "functions": {
+    "api/*.py": {
+      "runtime": "python@3.11"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
