--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,9 @@
   "buildCommand": "chmod a+x build.sh && ./build.sh",
   "outputDirectory": "public",
   "functions": {
-    "api/*.py": {
-      "runtime": "python@3.11"
+    "api/**/*.py": {
+      "runtime": "python3.11",
+      "excludeFiles": "{public,content,themes,static,resources,.git,.github,node_modules,*.md,*.cache}/**"
     }
   },
   "rewrites": [
