--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "outputDirectory": "public",
   "functions": {
     "api/**/*.py": {
-      "runtime": "python3.11",
+      "runtime": "python@3.11",
       "excludeFiles": "{public,content,themes,static,resources,.git,.github,node_modules,*.md,*.cache}/**"
     }
   },
