reset for vercel and railwya

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,52 @@
+# Hugo
+/resources/_gen
+/assets/jsconfig.json
+hugo_extended*
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Environment
 .env
+.env.local
+.env.*.local
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Node (if needed)
+node_modules/
+package-lock.json
+
+# Logs
+*.log
+
+# Vercel
+.vercel
