--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "chmod a+x build.sh && ./build.sh",
-  "outputDirectory": "public",
-  "functions": {
-    "api/**/*.py": {
-      "excludeFiles": "{public,content,themes,static,resources,.git,.github,node_modules,*.md,*.cache}/**"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/main.py"
-    }
-  ]
+  "buildCommand": "chmod +x build.sh && ./build.sh",
+  "outputDirectory": "public"
 }
