--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://soma-blog-hugo.vercel.app/"
+baseURL = "https://hugo-frontend.onrender.com/"
 languageCode = "en-us"
 title = "Eeshan S."
 theme = "rusty-typewriter"
