--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     routes:
       - type: rewrite
         source: /api/*
-        destination: http://python-api:10000/api/*
+        destination: http://python-api:10000/*
 
   # Service 2: The Python API (Backend)
   - type: web
