--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,8 @@ services:
     staticPublishPath: public
     routes:
       - type: rewrite
-        source: /api/*
-        destination: https://python-api-nj0d.onrender.com/api/$1
+        source: /api/:path*
+        destination: https://python-api-nj0d.onrender.com/api/:path*
 
   # Service 2: The Python API (Backend)
   - type: web
