FINAL FIX: Use internal service routing with correct path handling
- Revert to internal service communication: http://python-api:10000/\*
- Key insight: /api/* source captures everything after /api/
- So destination should be /* (not /api/*) to avoid double /api/ paths
- Based on DZone article showing proper internal service routing
- This should finally resolve 502/404 routing issues

--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,8 @@ services:
     staticPublishPath: public
     routes:
       - type: rewrite
-        source: /api/:path*
-        destination: https://python-api-nj0d.onrender.com/api/:path*
+        source: /api/*
+        destination: http://python-api:10000/*
 
   # Service 2: The Python API (Backend)
   - type: web
