FINAL PATH FIX: Preserve /api/ in routing destination
Based on logs showing routing works but paths are wrong:
- /api/health -> 200 OK ✅
- /stats -> 404 ❌ (should be /api/stats)

Fixed: /api/* -> https://python-api-nj0d.onrender.com/api/\*
This should correctly route /api/stats to /api/stats (not /stats)

--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     routes:
       - type: rewrite
         source: /api/*
-        destination: https://python-api-nj0d.onrender.com/*
+        destination: https://python-api-nj0d.onrender.com/api/*
 
   # Service 2: The Python API (Backend)
   - type: web
