--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,15 +5,33 @@ on:
     branches: [main]
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      hugo: ${{ steps.filter.outputs.hugo }}
+      api: ${{ steps.filter.outputs.api }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            hugo:
+              - 'content/**'
+              - 'static/**'
+              - 'layouts/**'
+              - 'themes/**'
+              - 'hugo.toml'
+              - 'Dockerfile'
+              - 'fly.toml'
+            api:
+              - 'api/**'
+
   deploy-hugo:
     name: Deploy Hugo Site
+    needs: changes
+    if: needs.changes.outputs.hugo == 'true'
     runs-on: ubuntu-latest
-    # Only run if Hugo files changed
-    if: |
-      contains(github.event.head_commit.modified, 'content/') ||
-      contains(github.event.head_commit.modified, 'static/') ||
-      contains(github.event.head_commit.modified, 'hugo.toml') ||
-      contains(github.event.head_commit.modified, 'Dockerfile')
     
     steps:
       - uses: actions/checkout@v4
@@ -27,9 +45,9 @@ jobs:
 
   deploy-api:
     name: Deploy Python API
+    needs: changes
+    if: needs.changes.outputs.api == 'true'
     runs-on: ubuntu-latest
-    # Only run if API files changed
-    if: contains(github.event.head_commit.modified, 'api/')
     
     steps:
       - uses: actions/checkout@v4
