--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,32 +5,8 @@ on:
     branches: [main]
 
 jobs:
-  changes:
-    runs-on: ubuntu-latest
-    outputs:
-      hugo: ${{ steps.filter.outputs.hugo }}
-      api: ${{ steps.filter.outputs.api }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            hugo:
-              - 'content/**'
-              - 'static/**'
-              - 'layouts/**'
-              - 'themes/**'
-              - 'hugo.toml'
-              - 'Dockerfile'
-              - 'fly.toml'
-            api:
-              - 'api/**'
-
   deploy-hugo:
     name: Deploy Hugo Site
-    needs: changes
-    if: needs.changes.outputs.hugo == 'true'
     runs-on: ubuntu-latest
     
     steps:
@@ -38,25 +14,7 @@ jobs:
       
       - uses: superfly/flyctl-actions/setup-flyctl@master
       
-      - name: Deploy Hugo
+      - name: Deploy Hugo Site to Fly.io
         run: flyctl deploy --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-
-  deploy-api:
-    name: Deploy Python API
-    needs: changes
-    if: needs.changes.outputs.api == 'true'
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      
-      - name: Deploy API
-        run: |
-          cd api
-          flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
