--- a/hugo.toml
+++ b/hugo.toml
@@ -31,14 +31,19 @@ url = "/posts/"
 weight = 2
 
 [[menu.main]]
+name = "Projects"
+url = "/projects/"
+weight = 3
+
+[[menu.main]]
 name = "About"
 url = "/about/"
-weight = 3
+weight = 4
 
 [[menu.main]]
 name = "Search"
 url = "/search/"
-weight = 4
+weight = 5
 
 [params]
 description = "Deep dives into marketing analytics, experimentation, and measurement from a practitioner's perspective."
