added custom domain

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://soma-blog-hugo-shy-bird-7985.fly.dev/"
+baseURL = "https://eeshans.com"
 languageCode = "en-us"
 title = "Eeshan S."
 theme = "rusty-typewriter"
