--- a/data/timeline.yaml
+++ b/data/timeline.yaml
@@ -1,6 +1,7 @@
 timeline:
   - timespan: "2019 — Present"
     title: "Sr. Manager Data Science"
+    company: "Starbucks"
     description: "Leading data science initiatives across marketing and product analytics"
     logo: ""
     details:
